libcom_shared.so: export required symbols

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,44 +2,39 @@ cmake_minimum_required(VERSION 3.20)
 project(asio-example)
 
 option(WITHOUT_TEST "Disable unit test" OFF)
+option(WITHOUT_EXAMPLES "Disable examples" OFF)
 
 set(CMAKE_CXX_STANDARD 17)
 add_compile_options(-Wall -Wextra -Wpedantic -Werror)
 set(CMAKE_CXX_CLANG_TIDY clang-tidy -extra-arg=-std=c++17 
     -checks=-*,modernize-*,readability-*,-modernize-use-trailing-return-type,-clang-diagnostic-error)
 
-find_package(Protobuf REQUIRED)
-add_library(proto STATIC proto/messages.proto)
-target_include_directories(proto PUBLIC ${CMAKE_CURRENT_BINARY_DIR} ${Protobuf_INCLUDE_DIRS})
-target_link_libraries(proto PUBLIC ${Protobuf_LIBRARIES})
-set_target_properties(proto PROPERTIES CXX_CLANG_TIDY "")
-protobuf_generate(TARGET proto)
-
-
-add_library(com STATIC 
+add_library(com_obj OBJECT
     src/com/context.cpp
     src/com/asio_context.cpp
     src/com/asio_borrowed_context.cpp
     src/com/asio_session.cpp
     src/com/asio_listener.cpp
     src/com/com_message.cpp)
+set_target_properties(com_obj PROPERTIES
+    POSITION_INDEPENDENT_CODE 1
+    CXX_VISIBILITY_PRESET hidden
+    VISIBILITY_INLINES_HIDDEN 1)
+target_include_directories(com_obj PRIVATE inc)
+target_compile_definitions(com_obj PRIVATE COM_EXPORT)
+
+add_library(com STATIC $<TARGET_OBJECTS:com_obj>)
 target_include_directories(com PUBLIC inc)
 
-add_executable(chat_client src/client/main.cpp)
-target_link_libraries(chat_client PRIVATE proto)
-set_target_properties(chat_client PROPERTIES CXX_CLANG_TIDY "")
+add_library(com_shared SHARED $<TARGET_OBJECTS:com_obj>)
+target_include_directories(com_shared PUBLIC inc)
 
-add_executable(chat_server
-    src/server/main.cpp
-    src/server/chat_server.cpp
-    src/server/chat_session.cpp)
-target_link_libraries(chat_server PRIVATE proto)
-set_target_properties(chat_server PROPERTIES CXX_CLANG_TIDY "")
-
-add_executable(test_client src/main.cpp)
-set_target_properties(test_client PROPERTIES CXX_CLANG_TIDY "")
+if(NOT(WITHOUT_EXAMPLES))
 
 add_subdirectory(example/echo)
+add_subdirectory(example/chat)
+
+endif()
 
 if(NOT(WITHOUT_TEST))
 
