--- a/example/echo/CMakeLists.txt
+++ b/example/echo/CMakeLists.txt
@@ -1,3 +1,6 @@
+# SPDX-License-Identifier: MPL-2.0
+# SPDX-FileCopyrightText: Copyright 2024 Falk Werner
+
 add_executable(echo-server echo_server.cpp)
 target_link_libraries(echo-server PRIVATE oizys)
 
