--- a/example/chat/rust/Cargo.toml
+++ b/example/chat/rust/Cargo.toml
@@ -5,4 +5,9 @@ edition = "2021"
 
 [dependencies]
 clap = { version="4.5.4", features=["derive"] }
+protobuf = "3.4.0"
 tokio = { version="1.37.0", features=["rt", "macros", "signal", "io-std", "io-util", "net"] }
+
+[build-dependencies]
+protobuf-codegen = "3.4.0"
+protoc-rust = "2.28.0"
